Commit_085: Correccion subir fotografía perfil animal

--- a/src/static/css/User_Adoption_Center/post/upload_animal.css
+++ b/src/static/css/User_Adoption_Center/post/upload_animal.css
@@ -14,7 +14,7 @@ body{
   transform: translate(200px);
   width: calc(100% - 200px); 
   overflow: auto;
-  border: green solid;
+  /* border: green solid; */
 }
 
 
