Commit_086: Agregado boton de reportes a publicaciones

--- a/src/static/css/User_Adoption_Center/profile_adoption_center.css
+++ b/src/static/css/User_Adoption_Center/profile_adoption_center.css
@@ -365,7 +365,7 @@ body{
   display: block;
 }
 
-.delete-button:hover, .edit-button:hover{
+.delete-button:hover, .edit-button:hover, .report-button:hover{
   background-color: #138e8e;
 }
 
