--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -16,7 +16,7 @@ body {
     /* grid-template-rows: 10% 10% 80%; */
 }
 
-.contenedor-pub-comunidad{
+.contenedor-pub-comunidad {
     /* border: solid purple; */
     width: 100%;
 }
@@ -24,7 +24,7 @@ body {
 .filtrosVistasHome {
     width: 100%;
     height: 100%;
-    
+
     /* border: solid royalblue; */
 }
 
@@ -34,7 +34,7 @@ body {
     grid-template-rows: min-content min-content;
 } */
 
-.opcionFiltros{
+.opcionFiltros {
     margin-top: 1%;
     width: 100%;
     height: 100%;
@@ -43,25 +43,25 @@ body {
     /* border: tomato solid; */
 }
 
-.barraFiltro{
+.barraFiltro {
     width: 100%;
     height: 100%;
     /* border: solid purple; */
 }
 
-.filtro-btn{
+.filtro-btn {
     width: 100%;
     height: 100%;
     /* border: solid saddlebrown; */
 }
 
-.buscar-btn-filtros{
+.buscar-btn-filtros {
     width: 100%;
     height: 100%;
     /* border: solid goldenrod; */
 }
 
-.selectFiltros{
+.selectFiltros {
     /* border: solid blueviolet; */
     width: 100%;
     height: 100%;
@@ -71,7 +71,7 @@ body {
 }
 
 
-.filtros_Tema-categoria{
+.filtros_Tema-categoria {
     width: 80%;
     height: 100%;
     display: grid;
@@ -79,7 +79,7 @@ body {
     /* border: red solid; */
 }
 
-.labelFiltro{
+.labelFiltro {
     width: 100%;
     height: 100%;
     /* border: solid; */
@@ -88,32 +88,32 @@ body {
     align-items: center;
 }
 
-.labelFiltro label{
+.labelFiltro label {
     font-family: 'Jua', sans-serif;
     font-size: medium;
 }
 
-.filtro-categoria{
+.filtro-categoria {
     width: 100%;
     height: 100%;
     /* border: solid burlywood; */
 }
 
-.filtro-categoria select{
+.filtro-categoria select {
     width: 75%;
 }
 
-.filtro-tema{
+.filtro-tema {
     width: 100%;
     height: 100%;
     /* border: solid chocolate; */
 }
 
-.filtro-tema select{
+.filtro-tema select {
     width: 75%;
 }
 
-.filtros_Comunidad-fundacion{
+.filtros_Comunidad-fundacion {
     /* border: yellow solid; */
     margin-top: 1%;
     margin-bottom: 1%;
@@ -157,7 +157,46 @@ body {
     color: #390c00;
 }
 
+/* Boton editar publicaciones */
+.dropdown {
+    width: 100%;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    border: solid purple;
+}
 
+.dropdown-content {
+    display: none;
+    position: absolute;
+    width: 160px;
+    z-index: 1;
+    /* border: solid orange; */
+    border: solid #48d1cc 1px;
+    border-radius: 10px;
+    background-color: white;
+    transform: translate(-140px);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+#icon_cog,
+#icon_option_publication {
+    font-size: 25px;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.report-button:hover {
+    background-color: #138e8e;
+}
 
 /* ////////////////////////////PUBLICACIONES */
 .contenedorHistorialPubs {
@@ -168,7 +207,7 @@ body {
     display: grid;
     grid-template-columns: 95%;
     justify-content: center;
-    
+
 }
 
 .contenedorHistorias {
@@ -186,7 +225,7 @@ body {
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 5% 95%;
+    grid-template-columns: 5% 90% 5%;
     grid-template-rows: 100%;
 }
 
@@ -270,7 +309,7 @@ body {
 .contenidoPublicacion {
     /* border: yellowgreen solid; */
     display: flex;
-    align-items:start;
+    align-items: start;
     justify-content: start;
     width: 100%;
 }
@@ -284,7 +323,8 @@ body {
     overflow: auto;
 }
 
-.contenedorHistorias:hover  {
+.contenedorHistorias:hover {
     background-color: #9df2e9;
-    transform: scale(1.05); /* Aumenta el tamaño en un 5% */
+    transform: scale(1.05);
+    /* Aumenta el tamaño en un 5% */
 }
