Commit_087: Agregado boton de reportes en comentarios por raza de animal

--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -163,7 +163,7 @@ body {
     position: relative;
     display: inline-block;
     cursor: pointer;
-    border: solid purple;
+    /* border: solid purple; */
 }
 
 .dropdown-content {
