--- a/src/static/css/Profile_Animal/Profile_Animal.css
+++ b/src/static/css/Profile_Animal/Profile_Animal.css
@@ -224,8 +224,53 @@ article {
     font-size: medium;
 }
 
+/* Boton editar publicaciones */
+.dropdown {
+    width: 5%;
+    position: relative;
+    display: inline-block;
+    justify-content: end;
+    cursor: pointer;
+    padding: 5px;
+    /* border: solid purple; */
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    width: 160px;
+    z-index: 1;
+    /* border: solid orange; */
+    border: solid #48d1cc 1px;
+    border-radius: 10px;
+    background-color: white;
+    transform: translate(-140px);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+#icon_cog,
+#icon_option_publication {
+    font-size: 25px;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.report-button:hover {
+    background-color: #138e8e;
+}
+
 
 /* COMENTARIOS DE RAZAS ANIMAL */
+
+
 .container-animal-comments {
     /* border: purple solid; */
 
@@ -243,12 +288,27 @@ article {
 
 .comment-animal-breed-publication {
     display: grid;
-    grid-template-columns: min-content auto;
+    /* grid-template-columns: min-content auto; */
+    grid-template-rows: min-content min-content ;
     width: 90%;
     height: 100%;
     border: solid #48d1cc 1px;
     margin: 2% 0 2% 0;
     border-radius: 10px;
+}
+
+.options_section{
+    width: 100%;
+    /* border: solid green; */
+    display: flex;
+    justify-content: end;
+}
+
+.publication_information {
+    display: grid;
+    grid-template-columns: min-content auto;
+    width: 100%;
+    height: 100%;
 }
 
 .comment-owner-photo {
