Commit_088: Agregado reportar en publicaciones de persona natural y correccion de errores en perfiles

--- a/src/static/css/User_Natural_Person/profile_natural_person.css
+++ b/src/static/css/User_Natural_Person/profile_natural_person.css
@@ -252,6 +252,6 @@ body{
   font-size: 25px;
 }
 
-.delete-button:hover, .edit-button:hover{
+.delete-button:hover, .edit-button:hover, .report-button:hover{
   background-color: #138e8e;
 }
