Commit_093: Corrección problemas de Js en perfil centro de adopción

--- a/src/templates/User_Adoption_Center/post/edit_profile.html
+++ b/src/templates/User_Adoption_Center/post/edit_profile.html
@@ -52,7 +52,7 @@ Editar perfil
                 <!-- <input id="departAlb" class="form-control" name="department" type="text" value="{{user_information.department}}"> -->
                 <select class="form-select" id="person_department" name="department"
                   onchange="changeCities('person_department','person_city')">
-                  <option selected disabled value="">Departamento ...</option>
+                  <option selected disabled value="{{user_information.department}}">Departamento ...</option>
                 </select>
               </div>
               <div class="infocampo">
@@ -77,7 +77,7 @@ Editar perfil
                 <label>Ciudad: </label>
                 <!-- <input id="ciudadAlb" class="form-control" name="city" type="text" value="{{user_information.city}}"> -->
                 <select class="form-select" id="person_city" name="city">
-                  <option selected disabled value="">Ciudad ...</option>
+                  <option selected disabled value="{{user_information.city}}">Ciudad ...</option>
                 </select>
               </div>
               <div class="infocampo">
