--- a/src/templates/auth/register_natural_person.html
+++ b/src/templates/auth/register_natural_person.html
@@ -79,6 +79,9 @@
               <select class="form-select form" name="identification_type" id="tipoDoc">
                 <option disabled value="0">Seleccione tipo de documento*</option>
                 <option value="CEDULA DE CIUDADANIA">Cedula de ciudadania</option>
+                <option value="TARJETA DE IDENTIDAD">Tarjeta de identidad</option>
+                <option value="CEDULA EXTRANJERA">Cedula extranjería</option>
+                <option value="PASAPORTE">Pasaporte</option>
               </select>
             </div>
             <div class="form-floating campo">
@@ -104,7 +107,7 @@
                 <option selected disabled>Departamento ...</option>
               </select>
             </div>
-      
+
             <div class="form-floating campo">
               <select class="form-select" id="person_city" name="person_city">
                 <option selected disabled>Ciudad ...</option>
@@ -139,7 +142,7 @@
                 id="contactoAlb">
               <label for="floatingInput">Numero de contacto*</label>
             </div>
-            
+
             <div class="form-floating campo">
               <input type="text" class="form-control" name="adoptionCenter_department" placeholder="Nombre1"
                 id="departamentoAlb">
@@ -174,7 +177,7 @@
             </div>
             <div class="form-floating campo">
               <input type="password" class="form-control" name="access_password" placeholder="Nombre1" required
-                id="contrasenaAlb" value="123Lapopo">
+                id="contrasenaAlb">
               <label for="floatingInput">Escriba una contraseña*</label>
               <div class="mostarContrasenia">
                 <input class="form-check-input" type="checkbox" id="flexCheckDefault">
@@ -185,8 +188,14 @@
             </div>
             <div class="form-floating campo">
               <input type="password" class="form-control" name="ConfirmContraseña" placeholder="Nombre1" id="contraConf"
-                required value="123Lapopo">
+                required >
               <label for="floatingInput">Confirme contraseña*</label>
+            </div>
+            <div style="text-align: left; font-size:small">
+              <p>Nota: Recuerde que una contraseña segura debe incluir: </p>
+              <p>*. Al menos 1 letra mayúscula</p>
+              <p>*. Al menos 1 numero</p>
+              <p>*. Al menos 8 caracteres</p>
             </div>
           </div>
           <div class="btns">
